[package]
name = "dbgtools"
version = "0.1.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
categories = [ "development-tools" ]
keywords = [ "debugging" ]
repository = "https://github.com/openqrnch/dbgtools"
description = "Expensive and intrusive debugging tools"
exclude = [ "examples", "rustfmt.toml" ]

[dependencies]

[target.'cfg(windows)'.dependencies]
dbgtools-win = { version = "0.1" }

